# humanoid-robot

big_grey_control/: CMakeLists.txt  package.xml  robot_test.cpp
big_grey_control/include/big_grey_control/: Robot.h  RobotArm.h  RobotCar.h  RobotCarControl.h  RobotClaw.h  RobotWaist.h  RobotWaistControl.h  image.h  motor_motorcommand.h  motor_public.h  servo_command.h
big_grey_control/launch/: control.launch
big_grey_control/src/: RobotArm.cpp  RobotArm_bigwhite.cpp  RobotCar.cpp  RobotCarControl.cpp  RobotClaw.cpp  RobotWaist.cpp  RobotWaistControl.cpp  action_server.cpp  arm_test.cpp  arm_track_control.cpp  big_grey_brain.cpp  big_grey_one_button_start.cpp  big_white.cpp  car_init.cpp  car_test.cpp  fabrik_demo.cpp  grasp.cpp  head_track_control.cpp  image_depth_rgb.cpp  main_bigwhite.cpp  manipulator_init.cpp  motor_main.cpp  motor_motorcommand.cpp  motor_public.cpp  movebase_grasp_test.cpp  pub_ceshi.cpp  read_car_data.cpp  robot_test.cpp  robot_waist_test.cpp  secondIK.cpp  second_solve.cpp  send_apple_site.cpp  servo_command.cpp  test_send_apple_site.cpp  test_sub.cpp  test_vision.cpp  timer_ros.cpp  vision_arm_control.cpp  vision_head_control.cpp  waist_init.cpp
big_grey_control/src/grasp备份/: fabrik_demo.cpp  grasp.cpp  robot_waist_test.cpp  test_octo.cpp
big_grey_control/srv/: big_grey_srv.srv
